--- a/stylesheet.less
+++ b/stylesheet.less
@@ -208,7 +208,7 @@ footer .widget.profile .bk-profile-socialicons span a {
     text-align: center;
     text-transform: uppercase;
     position: relative;
-    min-height: 60px;
+    min-height: 1em;
     background-color: @color-swatch3;
     @media @tablet {
       min-height: 0;
